--- a/build.gradle
+++ b/build.gradle
@@ -1,41 +1,29 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.6.RELEASE")
-    }
+plugins {
+    id 'org.springframework.boot' version '2.1.7.RELEASE'
+    id 'java'
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-bootJar {
-    baseName = 'app'
-    version =  '0.0.1'
-}
+group = 'eu.rmichniewski'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '1.8'
 
 repositories {
     mavenCentral()
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+ext {
+    set('springCloudVersion', "Greenwich.SR2")
+}
 
 dependencies {
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-zuul', version:'1.3.2.RELEASE'
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version:'1.5.4.RELEASE'
-//    compile group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version:'2.0.3.RELEASE'
-//    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-rest', version:'2.0.3.RELEASE'
-//    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb', version:'2.0.3.RELEASE'
-//    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'2.0.3.RELEASE'
-//    compile group: 'io.springfox', name: 'springfox-swagger-ui', version:'2.9.2'
-//    compile group: 'io.springfox', name: 'springfox-swagger2', version:'2.9.2'
-//    compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version:'2.0.3.RELEASE'
-//    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version:'2.0.3.RELEASE'
-//    exclude(module: 'commons-logging')
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-zuul'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
 
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
